<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Cartão de Visita</string>
    <string name="label_descrition_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_sucess">Cartão cadastrado com sucesso</string>
    <string name="label_show_unknow_color">Cor não encontrada!</string>
    <string name="label_share">Compartilhar</string>
    <string name="bot_odelete">BotãoDelete</string>
    <string name="label_endereco">Endereço</string>
    <string name="label_instagram">Instagram</string>

    <array name="custom_colors">

        <item>#219806</item>
        <item>#F44336</item>
        <item>#FFEB3B</item>

    </array>
</resources>